--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 .header {
     background-image: url("../images/Image.jpg");
     height: 95vh;
-    width: 100vw;
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Nunito Sans, sans-serif;
@@ -20,7 +19,7 @@
     content: "";
     position: absolute;
     background-color: rgba(0, 0, 0, 0.3);
-    width: 100vw;
+    width: 100%;
     height: 95vh;
 }
 
@@ -39,7 +38,7 @@
     content: "";
     position: absolute;
     background-color: rgba(0, 0, 0, 0.4);
-    width: 100vw;
+    width: 100%;
     height: 93px;
     z-index: 2;
 
@@ -161,8 +160,89 @@
     border-radius: 50%;
     bottom: 0;
     left: 50%;
-    transform: translate(0, 50%);
+    transform: translate(-50%, 50%);
     box-shadow: 0px 3px 6px #FF00004D;;
 }
 
+.blog {
+    font-family: Nunito Sans, sans-serif;
+    width: 1088px;
+    display: flex;
+    flex-direction: column;
+    margin: 100px auto;
+}
 
+.blog-header {
+    text-align: center;
+    font-size: 35px;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: relative;
+    z-index: 3;
+    margin-bottom: 30px;
+}
+
+.blog-header::before {
+    content: '';
+    width: 50px;
+    border-bottom: 3px solid #FF0000;
+    position: absolute;
+    top: 50%;
+    z-index: 0;
+    transform: translate(-115%, -50%);
+    border-radius: 8px;
+    box-shadow: 0 1px 6px #FF00004D;
+}
+
+.blog-header::after {
+    content: '';
+    width: 50px;
+    border-bottom: 3px solid #FF0000;
+    position: absolute;
+    top: 50%;
+    z-index: 0;
+    transform: translate(15%, -50%);
+    border-radius: 8px;
+    box-shadow: 0 1px 6px #FF00004D;
+}
+
+.article-container {
+    display: flex;
+    justify-content: center;
+    color: #6A6A6A;
+    gap: 16px;
+}
+
+.article-image {
+    height: 234px;
+    width: 352px;
+    margin-bottom: 3px;
+}
+
+.blog-article-header {
+    font-family: Nunito Sans, sans-serif;
+    margin: 20px 0;
+    text-transform: uppercase;
+}
+
+.article-text {
+    font-family: Open Sans, sans-serif;
+    font-weight: 300;
+    line-height: 19px;
+    width: 260px;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.btn-read-more {
+    background-color: #FF0000;
+    border-radius: 40px;
+    box-shadow: 0px 3px 6px #FF00004D;
+    color: white;
+    border: none;
+    text-transform: uppercase;
+    font-family: Nunito Sans, sans-serif;
+    font-size: 14px;
+    padding: 10px 30px;
+
+}
