--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@
     text-align: center;
     font-size: 16px;
     line-height: 22px;
+    font-weight: 600;
 }
 
 .buttons {
@@ -161,7 +162,7 @@
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 50%);
-    box-shadow: 0px 3px 6px #FF00004D;;
+    box-shadow: 0 3px 6px #FF00004D;;
 }
 
 .blog {
@@ -223,11 +224,13 @@
     font-family: Nunito Sans, sans-serif;
     margin: 20px 0;
     text-transform: uppercase;
+    font-size: 19px;
+    font-weight: 300;
 }
 
 .article-text {
-    font-family: Open Sans, sans-serif;
-    font-weight: 300;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 200;
     line-height: 19px;
     width: 260px;
     font-size: 14px;
@@ -237,11 +240,11 @@
 .btn-read-more {
     background-color: #FF0000;
     border-radius: 40px;
-    box-shadow: 0px 3px 6px #FF00004D;
+    box-shadow: 0 3px 6px #FF00004D;
     color: white;
     border: none;
     text-transform: uppercase;
-    font-family: Nunito Sans, sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 14px;
     padding: 10px 30px;
 }
@@ -274,4 +277,168 @@
 
 .service-image {
     width: 170px;
+}
+
+.service .article-text {
+    text-align: center;
+}
+
+.form {
+    font-family: "Nunito Sans", sans-serif;
+    width: 1088px;
+}
+
+.form-photo {
+    width: 444px;
+    height: 316.5px;
+}
+
+.form-container {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+}
+
+label {
+    display: none;
+}
+
+input,
+textarea {
+    display: block;
+    font-family: "Nunito Sans", sans-serif;
+    padding: 8px 12px;
+    font-weight: 300;
+}
+
+::-webkit-input-placeholder { /* Chrome */
+    color: #B2B2B2;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: #B2B2B2;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: #B2B2B2;
+    opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+    color: #B2B2B2;
+    opacity: 1;
+}
+
+.checkbox-container {
+    display: flex;
+    color: #B2B2B2;
+    font-family: "Open Sans", sans-serif;
+    font-size: 10px;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column;
+    width: 444px;
+    gap: 20px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="message"] {
+    border: 1px solid #D1D1D1;
+    width: 444px;
+    height: 38px;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+textarea {
+    border: 1px solid #D1D1D1;
+    width: 444px;
+    height: 140px;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+input:focus,
+textarea:focus {
+    border: 1px solid #FF0000;
+}
+
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 22px;
+    width: 22px;
+    border-radius: 8px;
+    border: 1px solid #D1D1D1;
+}
+
+
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+    left: 6px;
+    top: 2px;
+    width: 5px;
+    height: 10px;
+    border: solid red;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.btn-form {
+    display: inline-block;
+    width: 142px;
+    height: 40px;
+    border: 1px solid #FF0000;
+    border-radius: 40px;
+    box-shadow: 0 3px 6px #FF00004D;
+    background-color: white;
+    color: #FF0000;
+    text-transform: uppercase;
+    font-weight: 500;
+    align-self: flex-end;
+}
+
+.checkbox-text {
+    line-height: 14px;
+    font-size: 10px;
+    font-weight: 300;
 }
