--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,16 @@
     align-items: center;
 }
 
+
+.navigation-list a {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    font-size: 16px;
+    line-height: 93px;
+    padding: 0 30px;
+}
+
 .navigation-list a:link,
 .navigation-list a:visited {
     color: white;
@@ -85,18 +95,8 @@
 
 .navigation {
     height: 93px;
-/*    display: flex;
-    justify-content: center;
-    align-items: center;*/
-
 }
 
-.navigation-list-item {
-    font-size: 16px;
-    line-height: 93px;
-    align-self: center;
-    padding: 0 30px;
-}
 
 .header-info {
     padding: 0 160px;
@@ -317,13 +317,16 @@ textarea {
 ::-webkit-input-placeholder { /* Chrome */
     color: #B2B2B2;
 }
+
 :-ms-input-placeholder { /* IE 10+ */
     color: #B2B2B2;
 }
+
 ::-moz-placeholder { /* Firefox 19+ */
     color: #B2B2B2;
     opacity: 1;
 }
+
 :-moz-placeholder { /* Firefox 4 - 18 */
     color: #B2B2B2;
     opacity: 1;
@@ -399,7 +402,6 @@ textarea:focus {
     border-radius: 8px;
     border: 1px solid #D1D1D1;
 }
-
 
 
 /* Create the checkmark/indicator (hidden when not checked) */
